// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpandableCard component ExpandableCard.List component closes the opened card 1`] = `
<div>
  <div
    class="ExpandableCardList-root-411"
  >
    <div
      class="ExpandableCardList-item-412"
    >
      <div
        aria-label="Lorem ipsum"
        class="MuiPaper-root MuiCard-root ExpandableCard-root-413 ExpandableCard-collapsed-414 MuiPaper-elevation1 MuiPaper-rounded"
        role="button"
        style="height: 0px; position: absolute; top: 0px; right: 0px; left: 0px; min-height: auto;"
      >
        <button
          aria-label="Close me"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-436 iconButton IconButton-medium-442 IconButton-text-438 ExpandableCard-close-420"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          class="MuiCardContent-root ExpandableCard-content-423"
        >
          <div
            class="ExpandableCard-header-416"
          >
            <svg
              class="ExpandableCard-icon-417"
            />
            <h5
              class="MuiTypography-root ExpandableCard-title-418 ExpandableCard-titleStatic-419 Typography-root-445 MuiTypography-h5"
              data-testid="typography"
            >
              Lorem ipsum
            </h5>
          </div>
          <div
            class="ExpandableCard-body-421"
          >
            Sit dolor amet
          </div>
        </div>
      </div>
    </div>
    <div
      class="ExpandableCardList-item-412"
    >
      <div
        aria-label="Lorem Ipsum 0"
        class="MuiPaper-root MuiCard-root ExpandableCard-root-413 ExpandableCard-collapsed-414 MuiPaper-elevation1 MuiPaper-rounded"
        role="button"
        style="min-height: 100%;"
      >
        <button
          aria-label="Close"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-436 iconButton IconButton-medium-442 IconButton-text-438 ExpandableCard-close-420"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          class="MuiCardContent-root ExpandableCard-content-423"
        >
          <div
            class="ExpandableCard-header-416"
          >
            <svg
              class="ExpandableCard-icon-417"
            />
            <h5
              class="MuiTypography-root ExpandableCard-title-418 ExpandableCard-titleStatic-419 Typography-root-445 MuiTypography-h5"
              data-testid="typography"
            >
              Lorem Ipsum 0
            </h5>
          </div>
          <div
            class="ExpandableCard-body-421"
          >
            Sit dolor amet
          </div>
        </div>
      </div>
    </div>
    <div
      class="ExpandableCardList-item-412"
    >
      <div
        aria-label="Lorem Ipsum 1"
        class="MuiPaper-root MuiCard-root ExpandableCard-root-413 ExpandableCard-collapsed-414 MuiPaper-elevation1 MuiPaper-rounded"
        role="button"
        style="min-height: 100%;"
      >
        <button
          aria-label="Close"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-436 iconButton IconButton-medium-442 IconButton-text-438 ExpandableCard-close-420"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          class="MuiCardContent-root ExpandableCard-content-423"
        >
          <div
            class="ExpandableCard-header-416"
          >
            <svg
              class="ExpandableCard-icon-417"
            />
            <h5
              class="MuiTypography-root ExpandableCard-title-418 ExpandableCard-titleStatic-419 Typography-root-445 MuiTypography-h5"
              data-testid="typography"
            >
              Lorem Ipsum 1
            </h5>
          </div>
          <div
            class="ExpandableCard-body-421"
          >
            Sit dolor amet
          </div>
        </div>
      </div>
    </div>
    <div
      class="ExpandableCardList-item-412"
    >
      <div
        aria-label="Lorem Ipsum 2"
        class="MuiPaper-root MuiCard-root ExpandableCard-root-413 ExpandableCard-collapsed-414 MuiPaper-elevation1 MuiPaper-rounded"
        role="button"
        style="min-height: 100%;"
      >
        <button
          aria-label="Close"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-436 iconButton IconButton-medium-442 IconButton-text-438 ExpandableCard-close-420"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          class="MuiCardContent-root ExpandableCard-content-423"
        >
          <div
            class="ExpandableCard-header-416"
          >
            <svg
              class="ExpandableCard-icon-417"
            />
            <h5
              class="MuiTypography-root ExpandableCard-title-418 ExpandableCard-titleStatic-419 Typography-root-445 MuiTypography-h5"
              data-testid="typography"
            >
              Lorem Ipsum 2
            </h5>
          </div>
          <div
            class="ExpandableCard-body-421"
          >
            Sit dolor amet
          </div>
        </div>
      </div>
    </div>
    <div
      class="ExpandableCardList-item-412"
    >
      <div
        aria-label="Lorem Ipsum 3"
        class="MuiPaper-root MuiCard-root ExpandableCard-root-413 ExpandableCard-collapsed-414 MuiPaper-elevation1 MuiPaper-rounded"
        role="button"
        style="min-height: 100%;"
      >
        <button
          aria-label="Close"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-436 iconButton IconButton-medium-442 IconButton-text-438 ExpandableCard-close-420"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          class="MuiCardContent-root ExpandableCard-content-423"
        >
          <div
            class="ExpandableCard-header-416"
          >
            <svg
              class="ExpandableCard-icon-417"
            />
            <h5
              class="MuiTypography-root ExpandableCard-title-418 ExpandableCard-titleStatic-419 Typography-root-445 MuiTypography-h5"
              data-testid="typography"
            >
              Lorem Ipsum 3
            </h5>
          </div>
          <div
            class="ExpandableCard-body-421"
          >
            Sit dolor amet
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExpandableCard component ExpandableCard.List component doesn't re-expand an expanded card 1`] = `
<div>
  <div
    class="ExpandableCardList-root-369"
  >
    <div
      class="ExpandableCardList-item-370"
    >
      <div
        aria-label="Lorem Ipsum 0"
        class="MuiPaper-root MuiCard-root ExpandableCard-root-371 ExpandableCard-expanded-373 MuiPaper-elevation1 MuiPaper-rounded"
        role="button"
        style="min-height: 100%;"
      >
        <button
          aria-label="Close"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-394 iconButton IconButton-medium-400 IconButton-text-396 ExpandableCard-close-378"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          class="MuiCardContent-root ExpandableCard-content-381"
        >
          <div
            class="ExpandableCard-header-374"
          >
            <svg
              class="ExpandableCard-icon-375"
            />
            <h5
              class="MuiTypography-root ExpandableCard-title-376 Typography-root-403 MuiTypography-h5"
              data-testid="typography"
            >
              Lorem Ipsum 0
            </h5>
          </div>
          <div
            class="ExpandableCard-body-379"
          >
            Sit dolor amet
          </div>
        </div>
      </div>
    </div>
    <div
      class="ExpandableCardList-item-370"
    >
      <div
        aria-label="Lorem Ipsum 1"
        class="MuiPaper-root MuiCard-root ExpandableCard-root-371 ExpandableCard-collapsed-372 MuiPaper-elevation1 MuiPaper-rounded"
        role="button"
        style="min-height: 100%;"
      >
        <button
          aria-label="Close"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-394 iconButton IconButton-medium-400 IconButton-text-396 ExpandableCard-close-378"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          class="MuiCardContent-root ExpandableCard-content-381"
        >
          <div
            class="ExpandableCard-header-374"
          >
            <svg
              class="ExpandableCard-icon-375"
            />
            <h5
              class="MuiTypography-root ExpandableCard-title-376 ExpandableCard-titleStatic-377 Typography-root-403 MuiTypography-h5"
              data-testid="typography"
            >
              Lorem Ipsum 1
            </h5>
          </div>
          <div
            class="ExpandableCard-body-379"
          >
            Sit dolor amet
          </div>
        </div>
      </div>
    </div>
    <div
      class="ExpandableCardList-item-370"
    >
      <div
        aria-label="Lorem Ipsum 2"
        class="MuiPaper-root MuiCard-root ExpandableCard-root-371 ExpandableCard-collapsed-372 MuiPaper-elevation1 MuiPaper-rounded"
        role="button"
        style="min-height: 100%;"
      >
        <button
          aria-label="Close"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-394 iconButton IconButton-medium-400 IconButton-text-396 ExpandableCard-close-378"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          class="MuiCardContent-root ExpandableCard-content-381"
        >
          <div
            class="ExpandableCard-header-374"
          >
            <svg
              class="ExpandableCard-icon-375"
            />
            <h5
              class="MuiTypography-root ExpandableCard-title-376 ExpandableCard-titleStatic-377 Typography-root-403 MuiTypography-h5"
              data-testid="typography"
            >
              Lorem Ipsum 2
            </h5>
          </div>
          <div
            class="ExpandableCard-body-379"
          >
            Sit dolor amet
          </div>
        </div>
      </div>
    </div>
    <div
      class="ExpandableCardList-item-370"
    >
      <div
        aria-label="Lorem Ipsum 3"
        class="MuiPaper-root MuiCard-root ExpandableCard-root-371 ExpandableCard-collapsed-372 MuiPaper-elevation1 MuiPaper-rounded"
        role="button"
        style="min-height: 100%;"
      >
        <button
          aria-label="Close"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-394 iconButton IconButton-medium-400 IconButton-text-396 ExpandableCard-close-378"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          class="MuiCardContent-root ExpandableCard-content-381"
        >
          <div
            class="ExpandableCard-header-374"
          >
            <svg
              class="ExpandableCard-icon-375"
            />
            <h5
              class="MuiTypography-root ExpandableCard-title-376 ExpandableCard-titleStatic-377 Typography-root-403 MuiTypography-h5"
              data-testid="typography"
            >
              Lorem Ipsum 3
            </h5>
          </div>
          <div
            class="ExpandableCard-body-379"
          >
            Sit dolor amet
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExpandableCard component ExpandableCard.List component handles multiple cards expanded by default 1`] = `
<div>
  <div
    class="ExpandableCardList-root-285"
  >
    <div
      class="ExpandableCardList-item-286"
    >
      <div
        aria-label="Lorem Ipsum 0"
        class="MuiPaper-root MuiCard-root ExpandableCard-root-287 ExpandableCard-expanded-289 MuiPaper-elevation1 MuiPaper-rounded"
        role="button"
        style="min-height: 100%;"
      >
        <button
          aria-label="Close"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-310 iconButton IconButton-medium-316 IconButton-text-312 ExpandableCard-close-294"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          class="MuiCardContent-root ExpandableCard-content-297"
        >
          <div
            class="ExpandableCard-header-290"
          >
            <svg
              class="ExpandableCard-icon-291"
            />
            <h5
              class="MuiTypography-root ExpandableCard-title-292 Typography-root-319 MuiTypography-h5"
              data-testid="typography"
            >
              Lorem Ipsum 0
            </h5>
          </div>
          <div
            class="ExpandableCard-body-295"
          >
            Sit dolor amet
          </div>
        </div>
      </div>
    </div>
    <div
      class="ExpandableCardList-item-286"
    >
      <div
        aria-label="Lorem Ipsum 1"
        class="MuiPaper-root MuiCard-root ExpandableCard-root-287 ExpandableCard-collapsed-288 MuiPaper-elevation1 MuiPaper-rounded"
        role="button"
        style="min-height: 100%;"
      >
        <button
          aria-label="Close"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-310 iconButton IconButton-medium-316 IconButton-text-312 ExpandableCard-close-294"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          class="MuiCardContent-root ExpandableCard-content-297"
        >
          <div
            class="ExpandableCard-header-290"
          >
            <svg
              class="ExpandableCard-icon-291"
            />
            <h5
              class="MuiTypography-root ExpandableCard-title-292 ExpandableCard-titleStatic-293 Typography-root-319 MuiTypography-h5"
              data-testid="typography"
            >
              Lorem Ipsum 1
            </h5>
          </div>
          <div
            class="ExpandableCard-body-295"
          >
            Sit dolor amet
          </div>
        </div>
      </div>
    </div>
    <div
      class="ExpandableCardList-item-286"
    >
      <div
        aria-label="Lorem Ipsum 2"
        class="MuiPaper-root MuiCard-root ExpandableCard-root-287 ExpandableCard-collapsed-288 MuiPaper-elevation1 MuiPaper-rounded"
        role="button"
        style="min-height: 100%;"
      >
        <button
          aria-label="Close"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-310 iconButton IconButton-medium-316 IconButton-text-312 ExpandableCard-close-294"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          class="MuiCardContent-root ExpandableCard-content-297"
        >
          <div
            class="ExpandableCard-header-290"
          >
            <svg
              class="ExpandableCard-icon-291"
            />
            <h5
              class="MuiTypography-root ExpandableCard-title-292 ExpandableCard-titleStatic-293 Typography-root-319 MuiTypography-h5"
              data-testid="typography"
            >
              Lorem Ipsum 2
            </h5>
          </div>
          <div
            class="ExpandableCard-body-295"
          >
            Sit dolor amet
          </div>
        </div>
      </div>
    </div>
    <div
      class="ExpandableCardList-item-286"
    >
      <div
        aria-label="Lorem Ipsum 3"
        class="MuiPaper-root MuiCard-root ExpandableCard-root-287 ExpandableCard-collapsed-288 MuiPaper-elevation1 MuiPaper-rounded"
        role="button"
        style="min-height: 100%;"
      >
        <button
          aria-label="Close"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-310 iconButton IconButton-medium-316 IconButton-text-312 ExpandableCard-close-294"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          class="MuiCardContent-root ExpandableCard-content-297"
        >
          <div
            class="ExpandableCard-header-290"
          >
            <svg
              class="ExpandableCard-icon-291"
            />
            <h5
              class="MuiTypography-root ExpandableCard-title-292 ExpandableCard-titleStatic-293 Typography-root-319 MuiTypography-h5"
              data-testid="typography"
            >
              Lorem Ipsum 3
            </h5>
          </div>
          <div
            class="ExpandableCard-body-295"
          >
            Sit dolor amet
          </div>
        </div>
      </div>
    </div>
    <div
      class="ExpandableCardList-item-286"
    >
      <div
        aria-label="Lorem Ipsum"
        class="MuiPaper-root MuiCard-root ExpandableCard-root-287 ExpandableCard-collapsed-288 MuiPaper-elevation1 MuiPaper-rounded"
        role="button"
        style="min-height: 100%;"
      >
        <button
          aria-label="Close"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-310 iconButton IconButton-medium-316 IconButton-text-312 ExpandableCard-close-294"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          class="MuiCardContent-root ExpandableCard-content-297"
        >
          <div
            class="ExpandableCard-header-290"
          >
            <svg
              class="ExpandableCard-icon-291"
            />
            <h5
              class="MuiTypography-root ExpandableCard-title-292 ExpandableCard-titleStatic-293 Typography-root-319 MuiTypography-h5"
              data-testid="typography"
            >
              Lorem Ipsum
            </h5>
          </div>
          <div
            class="ExpandableCard-body-295"
          >
            Sit dolor amet
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExpandableCard component ExpandableCard.List component it renders a list of cards 1`] = `
<div>
  <div
    class="ExpandableCardList-root-201"
  >
    <div
      class="ExpandableCardList-item-202"
    >
      <div
        aria-label="Lorem Ipsum 1"
        class="MuiPaper-root MuiCard-root ExpandableCard-root-203 ExpandableCard-collapsed-204 MuiPaper-elevation1 MuiPaper-rounded"
        role="button"
        style="min-height: 100%;"
      >
        <button
          aria-label="Close"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-226 iconButton IconButton-medium-232 IconButton-text-228 ExpandableCard-close-210"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          class="MuiCardContent-root ExpandableCard-content-213"
        >
          <div
            class="ExpandableCard-header-206"
          >
            <svg
              class="ExpandableCard-icon-207"
            />
            <h5
              class="MuiTypography-root ExpandableCard-title-208 ExpandableCard-titleStatic-209 Typography-root-235 MuiTypography-h5"
              data-testid="typography"
            >
              Lorem Ipsum 1
            </h5>
          </div>
          <div
            class="ExpandableCard-body-211"
          >
            Sit dolor amet
          </div>
        </div>
      </div>
    </div>
    <div
      class="ExpandableCardList-item-202"
    >
      <div
        aria-label="Lorem Ipsum 2"
        class="MuiPaper-root MuiCard-root ExpandableCard-root-203 ExpandableCard-collapsed-204 MuiPaper-elevation1 MuiPaper-rounded"
        role="button"
        style="min-height: 100%;"
      >
        <button
          aria-label="Close"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-226 iconButton IconButton-medium-232 IconButton-text-228 ExpandableCard-close-210"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          class="MuiCardContent-root ExpandableCard-content-213"
        >
          <div
            class="ExpandableCard-header-206"
          >
            <svg
              class="ExpandableCard-icon-207"
            />
            <h5
              class="MuiTypography-root ExpandableCard-title-208 ExpandableCard-titleStatic-209 Typography-root-235 MuiTypography-h5"
              data-testid="typography"
            >
              Lorem Ipsum 2
            </h5>
          </div>
          <div
            class="ExpandableCard-body-211"
          >
            Sit dolor amet
          </div>
        </div>
      </div>
    </div>
    <div
      class="ExpandableCardList-item-202"
    >
      <div
        aria-label="Lorem Ipsum 3"
        class="MuiPaper-root MuiCard-root ExpandableCard-root-203 ExpandableCard-collapsed-204 MuiPaper-elevation1 MuiPaper-rounded"
        role="button"
        style="min-height: 100%;"
      >
        <button
          aria-label="Close"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-226 iconButton IconButton-medium-232 IconButton-text-228 ExpandableCard-close-210"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          class="MuiCardContent-root ExpandableCard-content-213"
        >
          <div
            class="ExpandableCard-header-206"
          >
            <svg
              class="ExpandableCard-icon-207"
            />
            <h5
              class="MuiTypography-root ExpandableCard-title-208 ExpandableCard-titleStatic-209 Typography-root-235 MuiTypography-h5"
              data-testid="typography"
            >
              Lorem Ipsum 3
            </h5>
          </div>
          <div
            class="ExpandableCard-body-211"
          >
            Sit dolor amet
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExpandableCard component ExpandableCard.List component renders with one card expanded 1`] = `
<div>
  <div
    class="ExpandableCardList-root-243"
  >
    <div
      class="ExpandableCardList-item-244"
    >
      <div
        aria-label="Lorem Ipsum 0"
        class="MuiPaper-root MuiCard-root ExpandableCard-root-245 ExpandableCard-expanded-247 MuiPaper-elevation1 MuiPaper-rounded"
        role="button"
        style="min-height: 100%;"
      >
        <button
          aria-label="Close"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-268 iconButton IconButton-medium-274 IconButton-text-270 ExpandableCard-close-252"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          class="MuiCardContent-root ExpandableCard-content-255"
        >
          <div
            class="ExpandableCard-header-248"
          >
            <svg
              class="ExpandableCard-icon-249"
            />
            <h5
              class="MuiTypography-root ExpandableCard-title-250 Typography-root-277 MuiTypography-h5"
              data-testid="typography"
            >
              Lorem Ipsum 0
            </h5>
          </div>
          <div
            class="ExpandableCard-body-253"
          >
            Sit dolor amet
          </div>
        </div>
      </div>
    </div>
    <div
      class="ExpandableCardList-item-244"
    >
      <div
        aria-label="Lorem Ipsum 1"
        class="MuiPaper-root MuiCard-root ExpandableCard-root-245 ExpandableCard-collapsed-246 MuiPaper-elevation1 MuiPaper-rounded"
        role="button"
        style="min-height: 100%;"
      >
        <button
          aria-label="Close"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-268 iconButton IconButton-medium-274 IconButton-text-270 ExpandableCard-close-252"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          class="MuiCardContent-root ExpandableCard-content-255"
        >
          <div
            class="ExpandableCard-header-248"
          >
            <svg
              class="ExpandableCard-icon-249"
            />
            <h5
              class="MuiTypography-root ExpandableCard-title-250 ExpandableCard-titleStatic-251 Typography-root-277 MuiTypography-h5"
              data-testid="typography"
            >
              Lorem Ipsum 1
            </h5>
          </div>
          <div
            class="ExpandableCard-body-253"
          >
            Sit dolor amet
          </div>
        </div>
      </div>
    </div>
    <div
      class="ExpandableCardList-item-244"
    >
      <div
        aria-label="Lorem Ipsum 2"
        class="MuiPaper-root MuiCard-root ExpandableCard-root-245 ExpandableCard-collapsed-246 MuiPaper-elevation1 MuiPaper-rounded"
        role="button"
        style="min-height: 100%;"
      >
        <button
          aria-label="Close"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-268 iconButton IconButton-medium-274 IconButton-text-270 ExpandableCard-close-252"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          class="MuiCardContent-root ExpandableCard-content-255"
        >
          <div
            class="ExpandableCard-header-248"
          >
            <svg
              class="ExpandableCard-icon-249"
            />
            <h5
              class="MuiTypography-root ExpandableCard-title-250 ExpandableCard-titleStatic-251 Typography-root-277 MuiTypography-h5"
              data-testid="typography"
            >
              Lorem Ipsum 2
            </h5>
          </div>
          <div
            class="ExpandableCard-body-253"
          >
            Sit dolor amet
          </div>
        </div>
      </div>
    </div>
    <div
      class="ExpandableCardList-item-244"
    >
      <div
        aria-label="Lorem Ipsum 3"
        class="MuiPaper-root MuiCard-root ExpandableCard-root-245 ExpandableCard-collapsed-246 MuiPaper-elevation1 MuiPaper-rounded"
        role="button"
        style="min-height: 100%;"
      >
        <button
          aria-label="Close"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-268 iconButton IconButton-medium-274 IconButton-text-270 ExpandableCard-close-252"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          class="MuiCardContent-root ExpandableCard-content-255"
        >
          <div
            class="ExpandableCard-header-248"
          >
            <svg
              class="ExpandableCard-icon-249"
            />
            <h5
              class="MuiTypography-root ExpandableCard-title-250 ExpandableCard-titleStatic-251 Typography-root-277 MuiTypography-h5"
              data-testid="typography"
            >
              Lorem Ipsum 3
            </h5>
          </div>
          <div
            class="ExpandableCard-body-253"
          >
            Sit dolor amet
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExpandableCard component ExpandableCard.List component sets the clicked card to expanded 1`] = `
<div>
  <div
    class="ExpandableCardList-root-327"
  >
    <div
      class="ExpandableCardList-item-328"
    >
      <div
        aria-label="Lorem Ipsum 0"
        class="MuiPaper-root MuiCard-root ExpandableCard-root-329 ExpandableCard-collapsed-330 MuiPaper-elevation1 MuiPaper-rounded"
        role="button"
        style="height: 0px; position: absolute; top: 0px; right: 0px; left: 0px; min-height: auto;"
      >
        <button
          aria-label="Close"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-352 iconButton IconButton-medium-358 IconButton-text-354 ExpandableCard-close-336"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          class="MuiCardContent-root ExpandableCard-content-339"
        >
          <div
            class="ExpandableCard-header-332"
          >
            <svg
              class="ExpandableCard-icon-333"
            />
            <h5
              class="MuiTypography-root ExpandableCard-title-334 ExpandableCard-titleStatic-335 Typography-root-361 MuiTypography-h5"
              data-testid="typography"
            >
              Lorem Ipsum 0
            </h5>
          </div>
          <div
            class="ExpandableCard-body-337"
          >
            Sit dolor amet
          </div>
        </div>
      </div>
    </div>
    <div
      class="ExpandableCardList-item-328"
      style="min-width: 0px; height: 0px;"
    >
      <div
        aria-label="Lorem Ipsum 1"
        class="MuiPaper-root MuiCard-root ExpandableCard-root-329 ExpandableCard-expanded-331 MuiPaper-elevation1 MuiPaper-rounded"
        role="button"
        style="height: 0px; top: 0px; right: 0px; left: 0px;"
      >
        <button
          aria-label="Close"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-352 iconButton IconButton-medium-358 IconButton-text-354 ExpandableCard-close-336"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          class="MuiCardContent-root ExpandableCard-content-339"
        >
          <div
            class="ExpandableCard-header-332"
          >
            <svg
              class="ExpandableCard-icon-333"
            />
            <h5
              class="MuiTypography-root ExpandableCard-title-334 Typography-root-361 MuiTypography-h5"
              data-testid="typography"
            >
              Lorem Ipsum 1
            </h5>
          </div>
          <div
            class="ExpandableCard-body-337"
          >
            Sit dolor amet
          </div>
        </div>
      </div>
    </div>
    <div
      class="ExpandableCardList-item-328"
    >
      <div
        aria-label="Lorem Ipsum 2"
        class="MuiPaper-root MuiCard-root ExpandableCard-root-329 ExpandableCard-collapsed-330 MuiPaper-elevation1 MuiPaper-rounded"
        role="button"
        style="min-height: 100%;"
      >
        <button
          aria-label="Close"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-352 iconButton IconButton-medium-358 IconButton-text-354 ExpandableCard-close-336"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          class="MuiCardContent-root ExpandableCard-content-339"
        >
          <div
            class="ExpandableCard-header-332"
          >
            <svg
              class="ExpandableCard-icon-333"
            />
            <h5
              class="MuiTypography-root ExpandableCard-title-334 ExpandableCard-titleStatic-335 Typography-root-361 MuiTypography-h5"
              data-testid="typography"
            >
              Lorem Ipsum 2
            </h5>
          </div>
          <div
            class="ExpandableCard-body-337"
          >
            Sit dolor amet
          </div>
        </div>
      </div>
    </div>
    <div
      class="ExpandableCardList-item-328"
    >
      <div
        aria-label="Lorem Ipsum 3"
        class="MuiPaper-root MuiCard-root ExpandableCard-root-329 ExpandableCard-collapsed-330 MuiPaper-elevation1 MuiPaper-rounded"
        role="button"
        style="min-height: 100%;"
      >
        <button
          aria-label="Close"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-352 iconButton IconButton-medium-358 IconButton-text-354 ExpandableCard-close-336"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          class="MuiCardContent-root ExpandableCard-content-339"
        >
          <div
            class="ExpandableCard-header-332"
          >
            <svg
              class="ExpandableCard-icon-333"
            />
            <h5
              class="MuiTypography-root ExpandableCard-title-334 ExpandableCard-titleStatic-335 Typography-root-361 MuiTypography-h5"
              data-testid="typography"
            >
              Lorem Ipsum 3
            </h5>
          </div>
          <div
            class="ExpandableCard-body-337"
          >
            Sit dolor amet
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExpandableCard component Should render the ExpandedCard expanded 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          aria-label="Title"
          class="MuiPaper-root MuiCard-root ExpandableCard-root-1 ExpandableCard-expanded-3 MuiPaper-elevation1 MuiPaper-rounded"
          role="button"
          style="min-height: 100%; pointer-events: auto;"
        >
          <div
            class="MuiCardContent-root ExpandableCard-content-11"
          >
            <div
              class="ExpandableCard-header-4"
            >
              <svg
                class="ExpandableCard-icon-5"
              />
              <h5
                class="MuiTypography-root ExpandableCard-title-6 Typography-root-13 MuiTypography-h5"
                data-testid="typography"
              >
                Title
              </h5>
            </div>
            <div
              class="ExpandableCard-body-9"
            >
              Body
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        aria-label="Title"
        class="MuiPaper-root MuiCard-root ExpandableCard-root-1 ExpandableCard-expanded-3 MuiPaper-elevation1 MuiPaper-rounded"
        role="button"
        style="min-height: 100%; pointer-events: auto;"
      >
        <div
          class="MuiCardContent-root ExpandableCard-content-11"
        >
          <div
            class="ExpandableCard-header-4"
          >
            <svg
              class="ExpandableCard-icon-5"
            />
            <h5
              class="MuiTypography-root ExpandableCard-title-6 Typography-root-13 MuiTypography-h5"
              data-testid="typography"
            >
              Title
            </h5>
          </div>
          <div
            class="ExpandableCard-body-9"
          >
            Body
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ExpandableCard component Should render the ExpandedCard not expanded 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          aria-label="Title"
          class="MuiPaper-root MuiCard-root ExpandableCard-root-21 ExpandableCard-collapsed-22 MuiPaper-elevation1 MuiPaper-rounded"
          role="button"
          style="min-height: 100%; pointer-events: auto;"
        >
          <div
            class="MuiCardContent-root ExpandableCard-content-31"
          >
            <div
              class="ExpandableCard-header-24"
            >
              <svg
                class="ExpandableCard-icon-25"
              />
              <h5
                class="MuiTypography-root ExpandableCard-title-26 ExpandableCard-titleStatic-27 Typography-root-33 MuiTypography-h5"
                data-testid="typography"
              >
                Title
              </h5>
            </div>
            <div
              class="ExpandableCard-body-29"
            >
              Body
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        aria-label="Title"
        class="MuiPaper-root MuiCard-root ExpandableCard-root-21 ExpandableCard-collapsed-22 MuiPaper-elevation1 MuiPaper-rounded"
        role="button"
        style="min-height: 100%; pointer-events: auto;"
      >
        <div
          class="MuiCardContent-root ExpandableCard-content-31"
        >
          <div
            class="ExpandableCard-header-24"
          >
            <svg
              class="ExpandableCard-icon-25"
            />
            <h5
              class="MuiTypography-root ExpandableCard-title-26 ExpandableCard-titleStatic-27 Typography-root-33 MuiTypography-h5"
              data-testid="typography"
            >
              Title
            </h5>
          </div>
          <div
            class="ExpandableCard-body-29"
          >
            Body
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ExpandableCard component it expands the card when changing isExpanded 1`] = `
<div>
  <div
    style="min-width: 0px; height: 0px;"
  >
    <div
      aria-label="Title"
      class="MuiPaper-root MuiCard-root ExpandableCard-root-161 ExpandableCard-expanded-163 MuiPaper-elevation1 MuiPaper-rounded"
      role="button"
      style="pointer-events: auto; height: 0px;"
    >
      <div
        class="MuiCardContent-root ExpandableCard-content-171"
      >
        <div
          class="ExpandableCard-header-164"
        >
          <svg
            class="ExpandableCard-icon-165"
          />
          <h5
            class="MuiTypography-root ExpandableCard-title-166 Typography-root-173 MuiTypography-h5"
            data-testid="typography"
          >
            Title
          </h5>
        </div>
        <div
          class="ExpandableCard-body-169"
        >
          Body
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExpandableCard component it expands the card when changing isExpanded 2`] = `
<div>
  <div
    style=""
  >
    <div
      aria-label="Title"
      class="MuiPaper-root MuiCard-root ExpandableCard-root-161 ExpandableCard-collapsed-162 MuiPaper-elevation1 MuiPaper-rounded"
      role="button"
      style="pointer-events: auto; min-height: 100%;"
    >
      <div
        class="MuiCardContent-root ExpandableCard-content-171"
      >
        <div
          class="ExpandableCard-header-164"
        >
          <svg
            class="ExpandableCard-icon-165"
          />
          <h5
            class="MuiTypography-root ExpandableCard-title-166 ExpandableCard-titleStatic-167 Typography-root-173 MuiTypography-h5"
            data-testid="typography"
          >
            Title
          </h5>
        </div>
        <div
          class="ExpandableCard-body-169"
        >
          Body
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExpandableCard component it triggers an onAnimationEnd event 1`] = `
Array [
  Array [
    true,
  ],
]
`;

exports[`ExpandableCard component should call onResize on a window resize and match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          aria-label="Title"
          class="MuiPaper-root MuiCard-root ExpandableCard-root-453 ExpandableCard-expanded-455 MuiPaper-elevation1 MuiPaper-rounded"
          role="button"
          style="min-height: 100%; pointer-events: auto;"
        >
          <div
            class="MuiCardContent-root ExpandableCard-content-463"
          >
            <div
              class="ExpandableCard-header-456"
            >
              <svg
                class="ExpandableCard-icon-457"
              />
              <h5
                class="MuiTypography-root ExpandableCard-title-458 Typography-root-465 MuiTypography-h5"
                data-testid="typography"
              >
                Title
              </h5>
            </div>
            <div
              class="ExpandableCard-body-461"
            >
              Body
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        aria-label="Title"
        class="MuiPaper-root MuiCard-root ExpandableCard-root-453 ExpandableCard-expanded-455 MuiPaper-elevation1 MuiPaper-rounded"
        role="button"
        style="min-height: 100%; pointer-events: auto;"
      >
        <div
          class="MuiCardContent-root ExpandableCard-content-463"
        >
          <div
            class="ExpandableCard-header-456"
          >
            <svg
              class="ExpandableCard-icon-457"
            />
            <h5
              class="MuiTypography-root ExpandableCard-title-458 Typography-root-465 MuiTypography-h5"
              data-testid="typography"
            >
              Title
            </h5>
          </div>
          <div
            class="ExpandableCard-body-461"
          >
            Body
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
